# yoru

./: .SRCINFO  Cargo.toml  LICENSE  PKGBUILD  README.md
src/: aur.rs  cache.rs  cli.rs  doctor.rs  main.rs  pacman.rs  search.rs  ui.rs
